# definately

./: .gitignore  README.md  launcher.py  pyproject.toml  requirements.txt  setup_app.py
definately/: __init__.py  app.py  capture.py  cli.py  commands.py  config.py  digest.py  imessage_in.py  memory.py  notify.py  service.py  spell.py  tutor.py
docs/: BLUEPRINT.md
sic/: __init__.py  app.py  cli.py  config.py  digest.py  memory.py  notify.py  spell.py
tests/: test_capture.py
