[project]
name = "definately"
version = "0.1.0"
description = "Your Mac remembers every word you fumble — and texts you a nightly digest. Built on Supermemory Local."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pynput>=1.7",
    "httpx>=0.27",
    "rumps>=0.4",
    "pyobjc-framework-Cocoa>=10",
]

[project.scripts]
definately = "definately.cli:main"
definately-app = "definately.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["definately"]
